# YAX

./: .gitignore  CMakeLists.txt  LICENSE.md  OpenXNA.sln  README.md  XNA++.v12.suo.doc  YAX.sln  main.cpp
Debug/: Framework.ilk
Framework/: Framework.vcxproj  Framework.vcxproj.filters  main.cpp
Framework.Curves/: Framework.Curves.vcxproj
Framework.Geometry/: Framework.Geometry.vcxproj
Framework.Graphics/: Framework.Graphics.vcxproj
Framework.Graphics.PackedVector/: Framework.Graphics.PackedVector.vcxproj  Framework.Graphics.PackedVector.vcxproj.filters
Framework.Input/: Framework.Input.vcxproj  Framework.Input.vcxproj.filters
Framework.Math/: Framework.Math.vcxproj
Framework/src/: CMakeLists.txt  GameTime.cpp  TimeSpan.cpp
Framework/src/Curves/: Curve.cpp  CurveKey.cpp
Framework/src/Geometry/: Point.cpp  Rectangle.cpp
Framework/src/Graphics/: DisplayMode.cpp  GraphicsAdapter.cpp
Framework/src/Graphics/PackedVector/: Alpha8.cpp  Bgr4444.cpp  Bgr565.cpp  Bgra5551.cpp  Byte4.cpp  HalfSingle.cpp  HalfVector2.cpp  HalfVector4.cpp  NormalizedByte2.cpp  NormalizedByte4.cpp  NormalizedShort2.cpp
Framework/src/Math/: MathHelper.cpp  Matrix.cpp  Quaternion.cpp  Vector2.cpp  Vector3.cpp  Vector4.cpp
Tests/: Tests.vcxproj  Tests.vcxproj.filters  catch.h  main.cpp
YAX.Curves/: Framework.Curves.vcxproj  Framework.Curves.vcxproj.filters
YAX.Geometry/: Framework.Geometry.vcxproj
YAX.Graphics/: Framework.Graphics.vcxproj.filters  YAX.Graphics.vcxproj
YAX.Graphics.PackedVector/: Framework.Graphics.PackedVector.vcxproj.filters  YAX.Graphics.PackedVector.vcxproj
YAX.Input/: Framework.Input.vcxproj  YAX.Input.vcxproj
(+551 files in other folders)
